' @autogenerated
@startuml
left to right direction
title Clases para tenant terms of use
class access.Tenant{
uid:string
name:string
root:boolean
domain:string
enabled:boolean
markForDelete:boolean
markForDeleteTime:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.TenantTermsOfUse{
uid:string
text:blob
enabled:boolean
attached:binary
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
access.Tenant "1"  o--  "N*" access.TenantTermsOfUse: tenant
access.RelyingParty "1"  o--  "N*" access.TenantTermsOfUse: relyingParty

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
